[gd_scene load_steps=2 format=3 uid="uid://hud001"]

[ext_resource type="Script" path="res://scripts/ui/HUDController.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="HUDContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="HUDContainer"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 400.0
offset_bottom = 32.0
theme_override_constants/separation = 20

[node name="LevelText" type="Label" parent="HUDContainer/TopBar"]
layout_mode = 2
text = "Level 1"
vertical_alignment = 1

[node name="HeartDisplay" type="HBoxContainer" parent="HUDContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="FireflyCounter" type="Label" parent="HUDContainer/TopBar"]
layout_mode = 2
text = "Fireflies: 0 / 0"
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="HUDContainer/TopBar"]
layout_mode = 2
text = "00:00"
vertical_alignment = 1

